fix image on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,13 +13,13 @@ body {
 .titlebar {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;  /* Align text to the start for better control */
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;  /* Align content to the top of the container */
     text-align: left;
-    width: 93%;  /* Adjust this to match the width of your main content if different */
+    width: 93%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;  /* Align these paddings to match other content */
+    padding-left: 15px;
     padding-right: 15px;
 }
 
@@ -30,8 +30,8 @@ body {
 .text-container h1, .text-container h4 {
     margin: 0;
     padding: 10px;
-    word-break: break-all;  /* Forces breaking of words at any character */
-    hyphens: auto;  /* Allows hyphenation to aid in breaking words at appropriate spots */
+    word-break: break-all; /* Forces breaking of words at any character */
+    hyphens: auto; /* Allows hyphenation to aid in breaking words at appropriate spots */
 }
 
 .image-container img {
@@ -58,18 +58,28 @@ body {
     }
 }
 
-/* Mobile-specific styles */
+/* Enhanced settings for mobile responsiveness */
 @media (max-width: 767px) {
     #title_desktop {
         display: none;
     }
 
     #title_mobile, .text-container h4 {
-        font-size: 4.5vw; /* Smaller, more responsive font size for mobile */
-        line-height: 1.3; /* Improves readability */
+        font-size: 4.5vw; /* Adjustable font size for space management */
+        line-height: 1.3; /* Optimized line height for readability */
+    }
+
+    .titlebar {
+        min-height: 150px; /* Set a minimum height to prevent too much shrinkage */
+        max-height: 30vh; /* Set a maximum height as a percentage of the viewport height */
+        overflow: hidden; /* Hide overflow to prevent pushing content */
+    }
+
+    .image-container {
+        max-height: 50px; /* Limit the image height to maintain layout */
+        overflow: hidden; /* Prevent image overflow */
     }
 }
-
 
 .highlight {
     color: var(--green) !important;
